feat : alert 스크립트 layout에 포함